Added Question Option management
Pretix was launching exceptions when pushing "select N from list" answers